@@ -1,3 +1,8 @@
+2003-08-06  Al Riddoch  <alriddoch@zepler.org>
+
+	* Mercator/Segment.h, Mercator/Segment.cpp: Add vertex cache
+	  pointer to segment. Vertex buffer is handled by client.
+
 2003-07-31  Al Riddoch  <alriddoch@zepler.org>
 
 	* Mercator/TerrainMod.h, Mercator/TerrainMod_impl.h,
